--- a/lib/package.json
+++ b/lib/package.json
@@ -1,14 +1,24 @@
 {
     "name": "ng-image-lazy-load",
-    "version": "0.0.1",
+    "version": "0.0.4",
     "author": "Dhia Louhichi <dhia@endyloop.com>",
     "description": "Angular directive to load images lazily.",
     "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/dhayhak/ng-image-lazy-load.git"
+    },
     "ngPackage": {
         "$schema": "./node_modules/ng-packagr/ng-package.schema.json",
         "lib": {
             "entryFile": "public_api.ts"
         },
         "dest": "dist"
-    }
+    },
+    "keywords": [
+        "lazy-load",
+        "lazy-image",
+        "angular",
+        "lazy-load-intersection-observer"
+    ]
 }
