--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build:lib": "ng-packagr -p lib/package.json"
+    "build:lib": "ng-packagr -p lib/package.json",
+    "npm:publish": "npm publish lib/dist"
   },
   "private": true,
   "dependencies": {
@@ -22,7 +23,7 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "core-js": "^2.5.4",
-    "ng-image-lazy-load": "file:lib/dist",
+    "ng-image-lazy-load": "^0.0.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
